crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__bytes_partial.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data bData of
  DataB payload#5 -> payload#5
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_6
    (force
      [[[[[[(force (builtin chooseData)) generated_6] (delay (error))] (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay [(lam payload_5 payload_5) [(builtin unBData) generated_6]])]))
    (builtin bData)])
--- optimized Core
case@Data bData of
  DataB payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam generated_3
      (force
        (case
          (constr 0
            generated_3
            (delay (error))
            (delay (error))
            (delay (error))
            (delay (error))
            (delay [(builtin unBData) generated_3]))
          builtin_4)))
      (builtin bData)])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
case@Data bData of
  DataB payload#5 -> payload#5
--- isolated folded Core
case@Data bData of
  DataB payload#5 -> payload#5
--- isolated cleaned Core
case@Data bData of
  DataB payload#5 -> payload#5
--- isolated UPLC before
(program 1.1.0
  [(lam generated_6
    (force
      [[[[[[(force (builtin chooseData)) generated_6] (delay (error))] (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay [(lam payload_5 payload_5) [(builtin unBData) generated_6]])]))
    (builtin bData)])
--- isolated UPLC after
(program 1.1.0
  [(lam generated_6
    (force
      [[[[[[(force (builtin chooseData)) generated_6] (delay (error))] (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay [(lam payload_5 payload_5) [(builtin unBData) generated_6]])]))
    (builtin bData)])
--- result
error: NotAConstant(Builtin(Runtime { args: [], fun: BData, forces: 0 }))
--- logs
[]
