crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__bytes_strict_failure_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#9 : Data = bData (trace "operand" in (con bytestring #6e617368)) in
let effect#11 : int = trace "between" in 0 in
case@Data data#9 of
  DataB payload#10 -> trace "selected" in 9
--- unoptimized UPLC
(program 1.1.0
  [(lam data_9
    [(lam effect_11
      [(lam generated_12
        (force
          [[[[[[(force (builtin chooseData)) generated_12] (delay (error))] (delay (error))]
            (delay (error))]
            (delay (error))]
            (delay
              (force
                [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]))
        data_9])
      (force
        [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
    [(builtin bData)
      (force
        [[(force (builtin trace)) (con string "operand")]
          (delay (con bytestring #6e617368))])]])
--- optimized Core
let anf#4 : bytes = trace "operand" in (con bytestring #6e617368) in
let data#1 : Data = bData anf#4 in
let effect#2 : int = trace "between" in 0 in
trace "selected" in 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam anf_3
      [(lam data_5
        [(lam effect_6
          (force [[builtin_7 (con string "selected")] (delay (con integer 9))]))
          (force [[builtin_7 (con string "between")] (delay (con integer 0))])])
        [(builtin bData) anf_3]])
      (force [[builtin_7 (con string "operand")] (delay (con bytestring #6e617368))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#12 : bytes = trace "operand" in (con bytestring #6e617368) in
let data#9 : Data = bData anf#12 in
let effect#11 : int = trace "between" in 0 in
case@Data data#9 of
  DataB payload#10 -> trace "selected" in 9
--- isolated folded Core
let anf#12 : bytes = trace "operand" in (con bytestring #6e617368) in
let data#9 : Data = bData anf#12 in
let effect#11 : int = trace "between" in 0 in
let payload#10 : bytes = anf#12 in
trace "selected" in 9
--- isolated cleaned Core
let anf#12 : bytes = trace "operand" in (con bytestring #6e617368) in
let data#9 : Data = bData anf#12 in
let effect#11 : int = trace "between" in 0 in
trace "selected" in 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_12
    [(lam data_9
      [(lam effect_11
        [(lam generated_13
          (force
            [[[[[[(force (builtin chooseData)) generated_13] (delay (error))] (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay
                (force
                  [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]))
          data_9])
        (force
          [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
      [(builtin bData) anf_12]])
    (force
      [[(force (builtin trace)) (con string "operand")]
        (delay (con bytestring #6e617368))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_12
    [(lam data_9
      [(lam effect_11
        (force
          [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))
        (force
          [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
      [(builtin bData) anf_12]])
    (force
      [[(force (builtin trace)) (con string "operand")]
        (delay (con bytestring #6e617368))])])
--- result
(con integer 9)
--- logs
["operand", "between", "selected"]
