crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__bytes_traced.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (trace "producer" in bData (con bytestring #6e617368)) of
  DataB payload#5 -> payload#5
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_6
    (force
      [[[[[[(force (builtin chooseData)) generated_6] (delay (error))] (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay [(lam payload_5 payload_5) [(builtin unBData) generated_6]])]))
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay [(builtin bData) (con bytestring #6e617368)])])])
--- optimized Core
let anf#2 : Data = trace "producer" in (con data (B #6e617368)) in
case@Data anf#2 of
  DataB payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam builtin_7
      [(lam anf_3
        [(lam generated_5
          (force
            [[[[[[builtin_6 generated_5] (delay (error))] (delay (error))] (delay (error))]
              (delay (error))]
              (delay [(lam payload_4 payload_4) [(builtin unBData) generated_5]])]))
          anf_3])
        (force [[builtin_7 (con string "producer")] (delay (con data (B #6e617368)))])])
      (force (builtin trace))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#8 : Data = trace "producer" in bData (con bytestring #6e617368) in
case@Data anf#8 of
  DataB payload#5 -> payload#5
--- isolated folded Core
let anf#8 : Data = trace "producer" in bData (con bytestring #6e617368) in
case@Data anf#8 of
  DataB payload#5 -> payload#5
--- isolated cleaned Core
let anf#8 : Data = trace "producer" in bData (con bytestring #6e617368) in
case@Data anf#8 of
  DataB payload#5 -> payload#5
--- isolated UPLC before
(program 1.1.0
  [(lam anf_8
    [(lam generated_9
      (force
        [[[[[[(force (builtin chooseData)) generated_9] (delay (error))] (delay (error))]
          (delay (error))]
          (delay (error))]
          (delay [(lam payload_5 payload_5) [(builtin unBData) generated_9]])]))
      anf_8])
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay [(builtin bData) (con bytestring #6e617368)])])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_8
    [(lam generated_9
      (force
        [[[[[[(force (builtin chooseData)) generated_9] (delay (error))] (delay (error))]
          (delay (error))]
          (delay (error))]
          (delay [(lam payload_5 payload_5) [(builtin unBData) generated_9]])]))
      anf_8])
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay [(builtin bData) (con bytestring #6e617368)])])])
--- result
(con bytestring #6e617368)
--- logs
["producer"]
