crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_aliases_cold_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#1 : Data = constrData (trace "tag" in 59) (trace "fields" in (con (list data) [(I 42)])) in
let alias#2 : Data = data#1 in
case@Bool false of
  True -> constr 1
  False -> force (delay (constr 0 data#1 ((case@Data alias#2 of
    DataConstr pair#3 -> \x#4 : int -> constr 0 pair#3 (case@Pair pair#3 of
      Pair tag#5 fields#6 -> constr 0 tag#5 fields#6) x#4) 7) (case@Data alias#2 of
    DataConstr second#7 -> second#7)))
--- unoptimized UPLC
(program 1.1.0
  [(lam data_1
    [(lam alias_2
      (case
        (con bool False)
        (force
          (delay
            (constr 0
              data_1
              [[(lam generated_8
                (force
                  [[[[[[(force (builtin chooseData)) generated_8]
                    (delay
                      [(lam pair_3
                        (lam x_4
                          (constr 0
                            pair_3
                            (case pair_3 (lam tag_5 (lam fields_6 (constr 0 tag_5 fields_6))))
                            x_4)))
                        [(builtin unConstrData) generated_8]])]
                    (delay (error))]
                    (delay (error))]
                    (delay (error))]
                    (delay (error))]))
                alias_2]
                (con integer 7)]
              [(lam generated_9
                (force
                  [[[[[[(force (builtin chooseData)) generated_9]
                    (delay [(lam second_7 second_7) [(builtin unConstrData) generated_9]])]
                    (delay (error))]
                    (delay (error))]
                    (delay (error))]
                    (delay (error))]))
                alias_2])))
        (constr 1)))
      data_1])
    [[(builtin constrData)
      (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])]
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])]])
--- optimized Core
let anf#15 : int = trace "tag" in 59 in
let anf#16 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#8 : Data = constrData anf#15 anf#16 in
let anf#18 : int -> 'erased = case@Data data#8 of
  DataConstr pair#10 -> \x#11 : int -> let anf#17 : 'erased = case@Pair pair#10 of
    Pair tag#12 fields#13 -> constr 0 tag#12 fields#13 in
  constr 0 pair#10 anf#17 x#11 in
let anf#19 : 'erased = anf#18 7 in
let anf#20 : pair int (list Data) = case@Data data#8 of
  DataConstr second#14 -> second#14 in
constr 0 data#8 anf#19 anf#20
--- optimized UPLC
(program 1.1.0
  [(lam builtin_26
    [(lam builtin_28
      [(lam anf_1
        [(lam anf_2
          [(lam data_3
            [(lam anf_21
              [(lam anf_22
                [(lam anf_24 (constr 0 data_3 anf_22 anf_24))
                  [(lam generated_25
                    (force
                      [[[[[[builtin_26 generated_25]
                        (delay [(lam second_23 second_23) [(builtin unConstrData) generated_25]])]
                        (delay (error))]
                        (delay (error))]
                        (delay (error))]
                        (delay (error))]))
                    data_3]])
                [anf_21 (con integer 7)]])
              [(lam generated_27
                (force
                  [[[[[[builtin_26 generated_27]
                    (delay
                      [(lam pair_4
                        (lam x_5
                          [(lam anf_9 (constr 0 pair_4 anf_9 x_5))
                            (case pair_4 (lam tag_6 (lam fields_7 (constr 0 tag_6 fields_7))))]))
                        [(builtin unConstrData) generated_27]])]
                    (delay (error))]
                    (delay (error))]
                    (delay (error))]
                    (delay (error))]))
                data_3]])
            [[(builtin constrData) anf_1] anf_2]])
          (force [[builtin_28 (con string "fields")] (delay (con (list data) [(I 42)]))])])
        (force [[builtin_28 (con string "tag")] (delay (con integer 59))])])
      (force (builtin trace))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#8 : int = trace "tag" in 59 in
let anf#9 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#1 : Data = constrData anf#8 anf#9 in
let alias#2 : Data = data#1 in
case@Bool false of
  True -> constr 1
  False -> force (delay (let anf#11 : int -> 'erased = case@Data alias#2 of
    DataConstr pair#3 -> \x#4 : int -> let anf#10 : 'erased = case@Pair pair#3 of
      Pair tag#5 fields#6 -> constr 0 tag#5 fields#6 in
    constr 0 pair#3 anf#10 x#4 in
  let anf#12 : 'erased = anf#11 7 in
  let anf#13 : pair int (list Data) = case@Data alias#2 of
    DataConstr second#7 -> second#7 in
  constr 0 data#1 anf#12 anf#13))
--- isolated folded Core
let anf#8 : int = trace "tag" in 59 in
let anf#9 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#1 : Data = constrData anf#8 anf#9 in
let alias#2 : Data = data#1 in
case@Bool false of
  True -> constr 1
  False -> force (delay (let anf#11 : int -> 'erased = let pair#3 : pair int (list Data) = unConstrData alias#2 in
  \x#4 : int -> let anf#10 : 'erased = case@Pair pair#3 of
    Pair tag#5 fields#6 -> constr 0 tag#5 fields#6 in
  constr 0 pair#3 anf#10 x#4 in
  let anf#12 : 'erased = anf#11 7 in
  let anf#13 : pair int (list Data) = let second#7 : pair int (list Data) = unConstrData alias#2 in
  second#7 in
  constr 0 data#1 anf#12 anf#13))
--- isolated cleaned Core
let anf#8 : int = trace "tag" in 59 in
let anf#9 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#1 : Data = constrData anf#8 anf#9 in
let pair#3 : pair int (list Data) = unConstrData data#1 in
let anf#10 : 'erased = case@Pair pair#3 of
  Pair tag#5 fields#6 -> constr 0 tag#5 fields#6 in
let anf#12 : 'erased = constr 0 pair#3 anf#10 7 in
let second#7 : pair int (list Data) = unConstrData data#1 in
constr 0 data#1 anf#12 second#7
--- isolated UPLC before
(program 1.1.0
  [(lam anf_8
    [(lam anf_9
      [(lam data_1
        [(lam alias_2
          (case
            (con bool False)
            (force
              (delay
                [(lam anf_11
                  [(lam anf_12
                    [(lam anf_13 (constr 0 data_1 anf_12 anf_13))
                      [(lam generated_14
                        (force
                          [[[[[[(force (builtin chooseData)) generated_14]
                            (delay [(lam second_7 second_7) [(builtin unConstrData) generated_14]])]
                            (delay (error))]
                            (delay (error))]
                            (delay (error))]
                            (delay (error))]))
                        alias_2]])
                    [anf_11 (con integer 7)]])
                  [(lam generated_15
                    (force
                      [[[[[[(force (builtin chooseData)) generated_15]
                        (delay
                          [(lam pair_3
                            (lam x_4
                              [(lam anf_10 (constr 0 pair_3 anf_10 x_4))
                                (case pair_3 (lam tag_5 (lam fields_6 (constr 0 tag_5 fields_6))))]))
                            [(builtin unConstrData) generated_15]])]
                        (delay (error))]
                        (delay (error))]
                        (delay (error))]
                        (delay (error))]))
                    alias_2]]))
            (constr 1)))
          data_1])
        [[(builtin constrData) anf_8] anf_9]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_8
    [(lam anf_9
      [(lam data_1
        [(lam pair_3
          [(lam anf_10
            [(lam anf_12
              [(lam second_7 (constr 0 data_1 anf_12 second_7))
                [(builtin unConstrData) data_1]])
              (constr 0 pair_3 anf_10 (con integer 7))])
            (case pair_3 (lam tag_5 (lam fields_6 (constr 0 tag_5 fields_6))))])
          [(builtin unConstrData) data_1]])
        [[(builtin constrData) anf_8] anf_9]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])])
--- result
(constr 0
  (con data (Constr 59 [I 42]))
  (constr 0
    (con (pair integer (list data)) (59, [(I 42)]))
    (constr 0 (con integer 59) (con (list data) [(I 42)]))
    (con integer 7))
  (con (pair integer (list data)) (59, [(I 42)])))
--- logs
["tag", "fields"]
